--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <section>
         <div class="speedCal">
-            <h3 class="cal-tittle"><span>Speed</span> Calculater &nbsp;(M/S)</h3>
+            <h3 class="cal-tittle"><span>Speed</span> Calculator &nbsp;(M/S)</h3>
             <input  id="disInput1" placeholder="ENTER DISTANCE"><br>
             <input  id="timeInput1" placeholder="ENTER TIME"><br> 
             <button  class="calButton" onclick="speedCalculater()">Calculate</button>
@@ -22,7 +22,7 @@
 
 
         <div class="speedCal">
-            <h3 class="cal-tittle"><span>Acceleration</span> Calculater(M/S<sup>2</sup>)</h3>
+            <h3 class="cal-tittle"><span>Acceleration</span> Calculator(M/S<sup>2</sup>)</h3>
             <input  id="disInput2" placeholder="ENTER VELOCITY"><br>
             <input  id="timeInput2" placeholder="ENTER TIME"><br> 
             <button  class="calButton" onclick="accCalculater()">Calculate</button>
@@ -31,7 +31,7 @@
 
 
         <div class="speedCal">
-            <h3 class="cal-tittle"><span>K:E</span> Calculater (J)</h3>
+            <h3 class="cal-tittle"><span>K:E</span> Calculator (J)</h3>
             <input  id="massInput3" placeholder="ENTER MASS"><br>
             <input  id="disInput3" placeholder="ENTER VELOCITY"><br> 
             <button  class="calButton" onclick="KeCalculater()">Calculate</button>
@@ -43,7 +43,7 @@
 
 
         <div class="speedCal">
-            <h3 class="cal-tittle"><span>P:E</span> Calculater (J)</h3>
+            <h3 class="cal-tittle"><span>P:E</span> Calculator (J)</h3>
             <input  id="massInput4" placeholder="ENTER MASS"><br>
             <input  id="heightInput" placeholder="ENTER HEIGHT"><br> 
             <button  class="calButton" onclick="PeCalculater()">Calculate</button>
@@ -52,7 +52,7 @@
 
 
         <div class="speedCal">
-            <h3 class="cal-tittle"><span>Power</span> Calculater (W)</h3>
+            <h3 class="cal-tittle"><span>Power</span> Calculator (W)</h3>
             <input  id="energyInput" placeholder="ENTER ENERGY"><br>
             <input  id="powerTime" placeholder="ENTER TIME"><br> 
             <button  class="calButton" onclick="PowerCalculater()">Calculate</button>
